--- a/Unifun/pom.xml
+++ b/Unifun/pom.xml
@@ -7,4 +7,20 @@
     <groupId>Unifun</groupId>
     <artifactId>Unifun</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.jsmpp/jsmpp -->
+    <dependency>
+        <groupId>org.jsmpp</groupId>
+        <artifactId>jsmpp</artifactId>
+        <version>2.3.6</version>
+    </dependency>
+        <dependency>
+            <groupId>org.jsmpp</groupId>
+            <artifactId>jsmpp-examples</artifactId>
+            <version>2.3.6</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
