--- a/Unifun/pom.xml
+++ b/Unifun/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>jsmpp-examples</artifactId>
             <version>2.3.6</version>
         </dependency>
+             <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.0</version>
+        </dependency>
     </dependencies>
 
 
